--- a/crm_lead_correct/views/crm_opportunity_view.xml
+++ b/crm_lead_correct/views/crm_opportunity_view.xml
@@ -269,7 +269,7 @@
                 <field name="title_action" />
                 <field name="channel_id" invisible="1"/>
                 <field name="type_id" invisible="1"/>
-                <field name="subjects" invisible="1"/>
+<!--                <field name="subjects" invisible="1"/>-->
                 <field name="stage_id"/>
                 <button name="stage_previous" string="Previous Stage" states="open,pending" type="object" icon="gtk-go-back" />
                 <button name="stage_next" string="Next Stage" states="open,pending" type="object" icon="gtk-go-forward" />
