[purchase_order_extended] show user_id on purchase

--- a/purchase_order_extended/view/purchase_order_view.xml
+++ b/purchase_order_extended/view/purchase_order_view.xml
@@ -39,6 +39,9 @@
                 <xpath expr="//field[@name='order_line']" position="attributes">
                     <attribute name="context">{'default_company_id': company_id, 'order_id': id}</attribute>
                 </xpath>
+                <field name="validator" position="before">
+                    <field name="user_id" />
+                </field>
             </field>
         </record>
 
