--- a/sale_order_requirement_project/views/order_requirement_line.xml
+++ b/sale_order_requirement_project/views/order_requirement_line.xml
@@ -21,14 +21,21 @@
             <field name="name">order.requirement.line.form.inherit</field>
             <field name="model">order.requirement.line</field>
             <field name="inherit_id" ref="sale_order_requirement.view_order_requirement_line_form"/>
-            <field name="type">tree</field>
+            <field name="type">form</field>
             <field name="arch" type="xml">
                 <field name="state" position="before">
                     <field name="product_type_small" invisible="1"/>
+                    <field name="order_requirement_id" />
                 </field>
 <!--                <group name="product_availability" position="attributes">-->
 <!--                    <attribute name="invisible">1</attribute>-->
 <!--                </group>-->
+                <notebook position="inside">
+                    <page string="Project" attrs="{'invisible': [('product_type_small', '!=', 'S')]}">
+                        <field name="connected_task_id" colspan="8" domain="[('order_requirement_id', '=', order_requirement_id), ('id', '!=', id), ('product_type_small', '=', 'S')]" />
+                        <field name="connected_product_ids" colspan="8" domain="[('order_requirement_id', '=', order_requirement_id), ('id', '!=', id), ('product_type_small', '!=', 'S')]" widget="many2many_checkboxes"  />
+                    </page>
+                </notebook>
             </field>
         </record>
 
