[account_invoice_extended] add tax code on invoice line

--- a/account_invoice_extended/views/account_view.xml
+++ b/account_invoice_extended/views/account_view.xml
@@ -97,8 +97,12 @@
             <field name="inherit_id" ref="account.view_invoice_line_tree"/>
             <field name="type">tree</field>
             <field name="arch" type="xml">
+
                 <field name="account_id" position="after">
                     <field domain="[('type','&lt;&gt;','view'), ('company_id', '=', parent.company_id), ('parent_id', '!=', False)]" name="account_analytic_id" groups="analytic.group_analytic_accounting"/>
+                </field>
+                <field name="price_subtotal" position="after">
+                    <field name="tax_list" />
                 </field>
             </field>
         </record>
