[project_extended] add improvement on analytic

--- a/project_extended/views/account_analytic_line.xml
+++ b/project_extended/views/account_analytic_line.xml
@@ -28,6 +28,10 @@
                 <field name="date" position="before">
                     <field name="invoice_id" />
                 </field>
+                <field name="amount" position="before">
+                    <field name="debit" sum="debit"/>
+                    <field name="credit" sum="debit"/>
+                </field>
             </field>
         </record>
 
