--- a/crm_lead_correct/views/crm_opportunity_view.xml
+++ b/crm_lead_correct/views/crm_opportunity_view.xml
@@ -201,8 +201,9 @@
                     <field name="ref2"/>
                 </page>
                 <page string="Sale Order" >
-                    <field name="sale_order_ids" mode="tree" nolabel="1">
-                        <tree string="History">
+                    <field name="sale_order_ids" mode="tree" nolabel="1" context="{'own_sale_id': sale_order}">
+                        <tree string="History" colors="green:connected_sale_order == True">
+                            <field name="connected_sale_order" invisible="1"/>
                             <field name="shop_id" />
                             <field name="name"/>
                             <field name="date_order"/>
