--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -15,8 +15,10 @@
                         <field name="stock_availability"/>
                         <field name="spare"/>
                     </group>
+
                     <field name="state" invisible="1"/>
-                    <newline/>
+                    <field name="sale_order_line_id" invisible="1"/>
+
                     <field name="new_product_id" on_change="onchange_product_id(new_product_id,qty,context)"/>
                     <field name="qty" on_change="onchange_qty(qty)"/>
                     <field name="original_cost"/>
@@ -40,6 +42,10 @@
 <!--                    <group colspan="8" col="8" attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),-->
 <!--                                                                         ('is_manufactured','=',False)]}">-->
                         <notebook colspan="4">
+                            <page string="Sale Order Line" attrs="{'invisible': [('sale_order_line_id','=',False)]}">
+                                <field name="sale_order_line_description" colspan="4" nolabel="1"/>
+                                <field name="sale_order_line_notes" colspan="4" nolabel="1"/>
+                            </page>
                             <page string="BOM" attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False), ('is_manufactured','=',False)]}">
                                 <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" context=""
                                        on_change="onchange_temp_mrp_bom_ids(temp_mrp_bom_ids, context)"
@@ -127,8 +133,10 @@
                         <field name="stock_availability"/>
                         <field name="spare"/>
                     </group>
+
                     <field name="state" invisible="1"/>
-                    <newline/>
+                    <field name="sale_order_line_id" invisible="1"/>
+
                     <field name="new_product_id" on_change="onchange_product_id(new_product_id,qty,context)"/>
                     <field name="qty"/>
                     <field name="is_manufactured" on_change="onchange_is_manufactured(is_manufactured,new_product_id)"/>
@@ -140,6 +148,10 @@
 <!--                    <group colspan="8" col="8" attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),-->
 <!--                                                                         ('is_manufactured','=',False)]}">-->
                         <notebook colspan="4">
+                            <page string="Sale Order Line" attrs="{'invisible': [('sale_order_line_id','=',False)]}">
+                                <field name="sale_order_line_description" colspan="4" nolabel="1"/>
+                                <field name="sale_order_line_notes" colspan="4" nolabel="1"/>
+                            </page>
                             <page string="BOM" attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False), ('is_manufactured','=',False)]}">
                                 <field name="temp_mrp_bom_ids" nolabel="1" colspan="4" readonly="1" widget="one2many_list">
                                     <tree string="BoM Structure" editable="top"
