--- a/project_task_issues/views/project_issue_view.xml
+++ b/project_task_issues/views/project_issue_view.xml
@@ -82,5 +82,22 @@
                 <!--</xpath>-->
             </field>
         </record>
+
+        <record id="action_silent_done" model="ir.actions.server">
+            <field name="name">Silent Done</field>
+            <field name="model_id" ref="model_project_issue"/>
+            <field name="state">code</field>
+            <field name="code">self.silent_done(cr, uid, context=context)</field>
+        </record>
+
+        <record id="menu_upgrade_modules" model="ir.values">
+            <field name="object" eval="True" />
+            <field name="name">Close without email</field>
+            <field name="key2">client_action_multi</field>
+            <field name="value" eval="'ir.actions.server,%d'%action_silent_done" />
+            <field name="key">action</field>
+            <field name="model">project.issue</field>
+        </record>
+
     </data>
 </openerp>
