--- a/sale_order_section/views/sale_view.xml
+++ b/sale_order_section/views/sale_view.xml
@@ -66,10 +66,11 @@
                     </field>
 
                     <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/form//field[@name='product_id']"
-                       position="after">
-                        <newline/>
+                       position="before">
+
                         <field name="order_line_base_id" domain="[('order_id', '=', parent.id)]"/>
                         <field name="option" />
+                        <newline/>
                     </xpath>
 
 
