--- a/crm_lead_correct/views/crm_super_calendar_view.xml
+++ b/crm_lead_correct/views/crm_super_calendar_view.xml
@@ -18,7 +18,7 @@
         </record>
 
         <record id="crm_super_calendar_form" model="ir.ui.view">
-            <field name="name">crm.super.calendar</field>
+            <field name="name">crm.super.calendar.tree</field>
             <field name="model">crm.super.calendar</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
@@ -32,15 +32,30 @@
             </field>
         </record>
 
+        <record id="crm_super_calendar_tree" model="ir.ui.view">
+            <field name="name">crm.super.calendar.tree</field>
+            <field name="model">crm.super.calendar</field>
+            <field name="type">tree</field>
+            <field name="arch" type="xml">
+                <tree string="Super Calendar" >
+                    <field name="user_id"/>
+                    <field name="type" />
+                    <field name="source_id" />
+                    <field name="date_action"/>
+                    <field name="partner_id"/>
+                </tree>
+            </field>
+        </record>
+
         <record id="crm_super_calendar_search" model="ir.ui.view">
-            <field name="name">crm.super.calendar</field>
+            <field name="name">crm.super.calendar.search</field>
             <field name="model">crm.super.calendar</field>
             <field name="type">search</field>
             <field name="arch" type="xml">
                 <search string="Super Calendar">
                     <field name="partner_id"/>
                     <field name="user_id">
-                        <filter domain="[('user_id','=',uid)]" help="My" icon="terp-personal"/>
+                        <filter domain="[('user_id','=',uid)]" help="My" icon="terp-personal" name="my_calendar"/>
                     </field>
                     <field name="type" />
                </search>
@@ -51,12 +66,37 @@
             <field name="name">Super Calendar</field>
             <field name="res_model">crm.super.calendar</field>
             <field name="view_type">form</field>
-            <field name="view_mode">calendar,form</field>
-            <field name="context">{'nocreate': '1', 'nodelete': '1', 'noduplicate': '1'}</field>
+            <field name="view_mode">calendar,form,tree</field>
+            <field name="context">{'nocreate': '1', 'nodelete': '1', 'noduplicate': '1', 'search_my_calendar': '1'}</field>
+            <field name="search_view_id" ref="crm_super_calendar_search"/>
+        </record>
+
+        <record id="action_crm_my_super_calendar" model="ir.actions.act_window">
+            <field name="name">My Super Calendar</field>
+            <field name="res_model">crm.super.calendar</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree</field>
+            <field name="domain">[('user_id','=',uid)]</field>
+            <field name="context">{'nocreate': '1', 'nodelete': '1', 'noduplicate': '1', 'search_my_calendar': '1'}</field>
+            <field name="search_view_id" ref="crm_super_calendar_search"/>
         </record>
 
         <menuitem name="Super Calendar" action="action_crm_super_calendar" id="menu_crm_super_calendar"
                   parent="base.menu_crm" sequence="2000" />
+
+        <record model="ir.ui.view" id="board_crm_form_inherit_replace3">
+            <field name="name">board.crm.form.inherit.replace1</field>
+            <field name="model">board.board</field>
+            <field name="type">form</field>
+            <field name="inherit_id" ref="sale.board_sales_form"/>
+            <field name="arch" type="xml">
+            <xpath expr="/form/board/column/action[@string='My appointments']" position="replace">
+                <action name="%(action_crm_my_super_calendar)d"
+                     string="My Calendar"
+                     />
+            </xpath>
+            </field>
+        </record>
 
     </data>
 </openerp>
