--- a/project_task_issues/views/project_issue_view.xml
+++ b/project_task_issues/views/project_issue_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <openerp>
     <data>
-        <record model="ir.ui.view" id="project_issue_form_view">
+
+        <record id="project_issue_form_view" model="ir.ui.view">
             <field name="name">Project Issue Tracker Form</field>
             <field name="model">project.issue</field>
             <field name="inherit_id" ref="project_issue.project_issue_form_view" />
@@ -44,8 +45,88 @@
                         </group>
                     </page>
                 </xpath>
+
+                <!-- Move field 'version_id' -->
+                <field name="version_id" position="replace"/>
+                <field name="active" position="after">
+                    <field name="version_id"/>
+                </field>
+
+                <!-- Move field Creation date before 'Assigned to' (user_id) -->
+                <field name="create_date" position="replace"/>
+                <field name="user_id" position="before">
+                    <field name="create_date"/>
+                </field>
+
+                <!-- Add field 'Status' -->
+                <xpath expr="/form/group/group" position="after">
+                    <field name="status_id"/>
+                </xpath>
+
             </field>
         </record>
+
+        <record id="project_issue_tree_view" model="ir.ui.view">
+            <field name="name">Project Issue Tracker Tree</field>
+            <field name="model">project.issue</field>
+            <field name="inherit_id" ref="project_issue.project_issue_tree_view" />
+            <field name="type">tree</field>
+
+            <field name="arch" type="xml">
+                <!-- Remove 'Progress' column -->
+                <field name="progress" position="replace"/>
+
+                <!-- Remove Version column -->
+                <field name="version_id" position="replace"/>
+
+                <field name="priority" position="after">
+                    <field name="status_id"/>
+                </field>
+
+                <field name="priority" position="after">
+                    <field name="categ_id"/>
+                </field>
+
+            </field>
+        </record>
+
+<!--
+
+
+        <record model="ir.ui.view" id="project_issue_tree_view">
+            <field name="name">Project Issue Tracker Tree</field>
+            <field name="model">project.issue</field>
+            <field name="type">tree</field>
+            <field name="arch" type="xml">
+                <tree string="Issue Tracker Tree" colors="black:state=='open';blue:state=='pending';grey:state in ('cancel', 'done')">
+                    <field name="id"/>
+                    <field name="create_date"/>
+                    <field name="name"/>
+                    <field name="partner_id" groups="base.group_extended"/>
+                    <field name="project_id" />
+                    <field name="priority" string="Priority"/>
+                    <field name="type_id" widget="selection" readonly="1" string="Stages" />
+                    <button name="prev_type" string="Previous" type="object" icon="gtk-go-back" help="Change to Previous Stage"/>
+                    <button name="next_type" string="Next" type="object" icon="gtk-go-forward" help="Change to Next Stage"/>
+                    <field name="version_id" widget="selection"/>
+                    <field name="user_id"/>
+                    <field name="progress" widget="progressbar" attrs="{'invisible':[('task_id','=',False)]}"/>
+                    <field name="state"/>
+                    <button name="case_cancel" string="Cancel" states="draft,open,pending" type="object" icon="gtk-cancel"/>
+                    <button name="case_close" string="Done" states="open,draft,pending" type="object" icon="gtk-jump-to"/>
+                    <button name="case_open" string="Open" states="draft,pending" type="object" icon="gtk-go-forward" help="To Do"/>
+                    <button name="case_pending" string="Pending" states="draft,open" type="object" icon="gtk-media-pause"/>
+                    <button name="case_escalate" string="Escalate" states="open,draft,pending" type="object" icon="gtk-go-up"/>
+                    <button name="case_reset" string="Reset to New" states="done,cancel" type="object" icon="gtk-convert"/>
+                    <field name="categ_id" invisible="1"/>
+                    <field name="task_id" invisible="1"/>
+                </tree>
+            </field>
+        </record>
+
+
+-->
+
 
         <record model="ir.ui.view" id="project_issue_sheet.project_issue_form_view">
             <field name="name">Project Issue Tracker Form</field>
